Changelog
=========

4.2.2 (unreleased)
------------------

- Render CSS as link, no css-import. This allows cooking with other
  link rendered css and gives better asynchronous download behavior.
  [thet]


4.2.1 (2014-07-07)
------------------

- Brown bag release, late javascript loading was broken and did not
  load flowplayer at all. [do3cc]


4.2.0 (2014-07-07)
------------------

- Complete uninstall profile.
  [thet]

- Set our properties on install, also when kupu is not available.  Fix
  the zcml condition for loading kupu.zcml.
  [maurits]
  
- Load Javascript later, so that slow image loading does not result in
  too small flowplayer windows.
  [do3cc]


4.1 (2014-03-20)
----------------

- fix profiles to not be defined twice
  [vangheem]

- provide a more complete uninstall
  [vangheem]


4.0 (2013-04-18)
----------------

* Include keul's fix he did for 3.x release.
  Updated zcml directives for dexterity usage. Close #3
  [keul, saily]

* Use different install profiles if no ``plone.app.collection`` module was
  found which is default for Plone 4.0.x and Plone 4.1.x versions.
  [saily]

* Pep8 cleanup
  [saily]

* Focus development to Plone 4.x and add test buildouts for all Plone 4
  versions including a travis test for all of them.
  [saily]

* Upgrade to plone.app.testing and remove collective.testcaselayer
  [saily]

* Upgrade to latest V1 bootstrap
  [saily]

* Use version 4.0 since we focus development to Plone 4.x now.
  [saily]

* Plone 4.3 compatiblity.
  [pbauer]


3.1.2 - 2013-1-25
-----------------

* Define initFlowpalyer variable and add optional param "area" to load
  flowplayer on a specific area.
  [mathias.leimgruber]

* Clean up init.js
  [mathias.leimgruber]

* Updated italian translation [keul]
* Updated Flowplayer to 3.2.15
  [tom_gross]

3.1.1 - 2012-09-12
------------------

* Fixed manifest.in [jensens]

3.1 - 2012-09-12
----------------

* Added width and height configuration in file edition video tab