@@ -3,8 +3,12 @@ from plone.testing import layered
 from collective.flowplayer.testing import optionflags
 from collective.flowplayer.testing import \
     COLLECTIVE_FLOWPLAYER_FUNCTIONAL_TESTING
-
-import unittest
+try:
+    # Python 2.6
+    import unittest2 as unittest
+except ImportError:
+    # Python 2.7 has unittest2 integrated in unittest
+    import unittest
 import doctest
 
 tests = (
