@@ -1,12 +1,15 @@
 # -*- coding: utf-8 -*-
 from Products.CMFPlone.utils import _createObjectByType
-
 from collective.flowplayer.events import ChangeLinkView
 from collective.flowplayer.interfaces import IMediaInfo, IVideo
 from collective.flowplayer.testing import \
     COLLECTIVE_FLOWPLAYER_INTEGRATION_TESTING
-
-import unittest
+try:
+    # Python 2.6
+    import unittest2 as unittest
+except ImportError:
+    # Python 2.7 has unittest2 integrated in unittest
+    import unittest
 import os.path
 import zope.interface
 
